--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
                 <version>7.14.0</version>
                 <scope>test</scope>
             </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
