--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.linecorp.armeria</groupId>
+            <artifactId>armeria</artifactId>
+            <version>1.25.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
