--- a/src/test/resources/configs/DEV_App_Config.properties
+++ b/src/test/resources/configs/DEV_App_Config.properties
@@ -1,4 +1,7 @@
-
-
-App_URL = 'https://dev.insurance.tekschool-students.com/'
-browserType = 'chrome'
+ui.url = https://dev.insurance.tekschool-students.com/
+ui.browser.type =chrome
+ui.browser.option.headless=true
+#this are examples
+db.hostname=yourdbhostname
+db.username=yourdbusername
+db.password=yourpassword
